chore: add fixed footer and issue where page was blank at startup
 - paginator stream needed to be front loaded with a value in the datasource or else the combineLatest wouldn't trigger until it changed.
 - move the bottom footer left/right with sidenav to avoid overlapping sidenav items. (jank)
 - add postinstall to rebuild sqlite for electron

--- a/src/app.component.css
+++ b/src/app.component.css
@@ -14,5 +14,14 @@ mat-sidenav [mat-button] {
     font-size: 14px;
     cursor: pointer;
     transition: color .1s;
+    text-align: start;
+}
 
+mat-paginator {
+    position: fixed;
+    padding: 12px;
+    bottom:0;
+    left:0;
+    right:0;
+    z-index: 2;
 }
