--- a/src/components/examples-table.component.css
+++ b/src/components/examples-table.component.css
@@ -1,11 +1,4 @@
 
-mat-paginator {
-    position: fixed;
-    padding: 12px;
-    bottom:0;
-    left:0;
-    right:0;
-}
 .mat-cell, .mat-header-cell {
     overflow: hidden;
     word-wrap: break-word;
